# Agentic_Graph

./: .gitignore  README.md  app_logger.py  database.py  init_db.py  main.py  models.py  oauth2.py  pyproject.toml  requirements.txt  streamlit_app.py  utils.py  vercel.json
chatbot/: graph.py  operations.py  practice.py  researach.ipynb  state_manager.py
chatbot/nodes/: account_summary_node.py  balance_node.py  final_result.py  get_operations.py  intent_classifier.py  multi_query_generation.py  numeric_pipeline.py  pick_expanded_query.py  pick_subquery_node.py  should_continue.py  spending_visualization.py  subquery.py  summary_results.py  transactions_summary.py  user_account_node.py  visualize.py
chatbot/prompts/: parameters.py
chatbot/services/: account.py  account_summary.py  balance.py  income.py  spending.py  spending_visualization.py  transactions.py  trend.py
frontend/: app.js  index.html  styles.css
public/: app.js  index.html  styles.css
routes/: accounts_routes.py  auth_routes.py  transactions_routes.py  user.py
schemas/: __init__.py
schemas/accounts/: schema.py
schemas/chatbot/: schema.py
schemas/email/: schema.py
schemas/token/: schema.py
schemas/transactions/: schema.py
schemas/users/: schema.py
